[project]
name = "grepper-workday-modular"
version = "0.1.0"
description = "Reusable Workday jobs scraper, normalizer, cleaner, and ranker."
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
workday-jobs = "workday_jobs.cli:main"
workday-jobs-web = "workday_jobs.web:main"

[tool.pytest.ini_options]
pythonpath = ["."]
